[tool.poetry]
name = "pswm"
version = "0.1.0"
description = "A simple command line password manager written in Python."
license = "GPL-2.0-only"
authors = ["YisusChrist <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/pswm"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
cryptocode = "^0.1"
prettytable = "^3.10.0"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pswm = "pswm.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
